[metadata]
name = OMMBV
version = 0.5.5
url = https://github.com/rstoneback/OMMBV
author = Russell A. Stoneback
author_email = russell@stoneris.com
description = 'Orthogonal magnetic vector basis generation'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: BSD
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
license_file = LICENSE

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
packages = find:
include_package_data = True
zip_safe = False
install_requires = numpy
		   scipy

[coverage:run]

[coverage:report]

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  H105
  W503
  H404
  H405
  OMMBV/__init__.py E402 F401

exclude = conf.py
  tests