[metadata]
name = OMMBV
version = file: OMMBV/version.txt
url = https://github.com/rstoneback/OMMBV
author = Russell A. Stoneback
author_email = github@stoneris.com
description = 'Orthogonal geomagnetic vector basis and field-line mapping for multipole magnetic fields.'
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
keywords =
    vector-basis
    geomagnetic-field
    magnetic-fields
    field-line-tracing
    meridional
    zonal
    field-aligned
    satellite
    electric-field-mapping
    ion-drift-mapping
    multipole
license_file = LICENSE

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
packages = find:
include_package_data = True
zip_safe = False
install_requires = numpy
		   pysat>=3.0.0
		   scipy

[coverage:run]

[coverage:report]

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  H105
  W503
  H404
  H405
  E127

exclude = conf.py
  tests
  __init__.py

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    load_options: tests for instruments including optional load kwargs
    first: first tests to run
    second: second tests to run
